Fix - Municipality list buttons

--- a/destination/templates/municipalities_name_list.html
+++ b/destination/templates/municipalities_name_list.html
@@ -23,7 +23,7 @@
             <!-- View More Button -->
             <div class="p-4 pt-0">
                 <a href="{% url 'municipality_detail' municipality.id %}" 
-                class="block text-center bg-customAqua text-white font-body py-2 rounded">
+                class="block text-center bg-customLightGreen text-customDarkGreen font-semibold font-body py-2 rounded">
                     Ver más
                 </a>
             </div>
