--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -93,7 +93,7 @@
 
     <!-- Login button -->
     <div class="ml-5">
-        <a href="#" class="bg-customDarkGreen text-white font-semibold px-4 py-2 rounded-lg shadow-md font-body">Iniciar sesión</a>
+        <a href="{% url 'login' %}" class="bg-customDarkGreen text-white font-semibold px-4 py-2 rounded-lg shadow-md font-body">Iniciar sesión</a>
     </div>
 </header>
 
