--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -102,6 +102,27 @@
         {% endif %}
 </header>
 
+<!-- message config by taildwind -->
+{% if messages %}
+  <div class="fixed top-24 left-1/2 transform -translate-x-1/2 z-50 w-full max-w-md">
+    {% for message in messages %}
+      {% if message.tags == "success" %}
+        <div class="bg-green-100 border border-green-400 text-green-700 px-4 py-3 rounded relative mb-4 shadow-md" role="alert">
+      {% elif message.tags == "error" %}
+        <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative mb-4 shadow-md" role="alert">
+      {% elif message.tags == "warning" %}
+        <div class="bg-yellow-100 border border-yellow-400 text-yellow-700 px-4 py-3 rounded relative mb-4 shadow-md" role="alert">
+      {% elif message.tags == "info" %}
+        <div class="bg-blue-100 border border-blue-400 text-blue-700 px-4 py-3 rounded relative mb-4 shadow-md" role="alert">
+      {% else %}
+        <div class="bg-gray-100 border border-gray-400 text-gray-700 px-4 py-3 rounded relative mb-4 shadow-md" role="alert">
+      {% endif %}
+          <span class="block sm:inline">{{ message }}</span>
+        </div>
+    {% endfor %}
+  </div>
+{% endif %}
+
 <!-- Dynamic content -->
 <div>
     {% block content %}
