--- a/destination/templates/municipality_detail.html
+++ b/destination/templates/municipality_detail.html
@@ -109,7 +109,7 @@
         </div>
         
         <!-- Restaurants Section -->
-        <div class="card bg-customLightGreen shadow-lg rounded-lg mt-8 p-6">
+        <div class="card bg-white shadow-lg rounded-lg mt-8 p-6">
             
             <div class="card-body">
                 <h2 class="card-title text-3xl font-bold text-customDarkGreen font-title">¿Dónde Comer en {{ municipality.name }}?</h2>
