--- a/user/templates/login.html
+++ b/user/templates/login.html
@@ -1,26 +1,21 @@
+{% extends "base.html" %}
+{% load static tailwind_tags %}
 
-<!-- templates/login.html -->
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>Iniciar Sesión</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    {% load static %}
-</head>
+{% block content%}
+
 <body class="bg-gray-100 min-h-screen h-screen flex items-center justify-center">
 
     <div class="w-full h-screen bg-white shadow-lg overflow-hidden flex">
         <!-- Left side (Image + Title) -->
         <div class="w-1/2 bg-cover bg-center relative" style="background-image: url('/static/logo_bg.svg');">
             <div class="absolute inset-0 bg-black bg-opacity-40 flex flex-col items-center justify-center text-white text-center p-6">
-                <h1 class="text-4xl font-bold leading-tight">ANTIOQUIA OFF<br>THE MAP</h1>
+                <h1 class="text-4xl font-bold font-title leading-tight">ANTIOQUIA OFF<br>THE MAP</h1>
             </div>
         </div>
 
         <!-- Right side (Form) -->
         <div class="w-1/2 p-10 flex flex-col justify-center">
-            <h2 class="text-2xl font-bold mb-2">Inicio de Sesión</h2>
+            <h2 class="text-2xl font-bold font-title mb-2">Inicio de Sesión</h2>
             <p class="text-gray-600 mb-6">Bienvenido de vuelta a Antioquia Off The Map. Por favor, inicia sesión</p>
 
             {% if messages %}
@@ -56,4 +51,5 @@
     </div>
 
 </body>
-</html>
+
+{% endblock %}
